[tool.poetry]
name = "turtle-coin-trader"
version = "0.1.0"
description = ""
authors = ["sstoneju"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.11.3"
pyupbit = "^0.2.14"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
